--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/* Style the navigation menu */
+.navbar {
+    width: 100%;
+    background-color: rgba(94, 144, 253, 0);
+    overflow: auto;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  /* Navigation links */
+  .navbar a {
+    float: left;
+    padding: 10px;
+    color: rgb(0, 0, 0);
+    text-decoration: none ;
+    font-size: 22px;
+    font-family: Comic Sans MS;
+    width: 16.66%; /* Four equal-width links. If you have two links, use 50%, and 33.33% for three links, etc.. */
+    text-align: center; /* If you want the text to be centered */
+    display: block
   }
-  to {
-    transform: rotate(360deg);
+  
+  /* Add a background color on mouse-over */
+  .navbar a:hover {
+    background-color: rgba(152, 176, 255, 0.288);
   }
-}
+  
+  /* Style the current/active link */
+  .navbar a.active {
+    background-color: rgba(255, 228, 196, 0.253);
+  }
+  
+  /* Add responsiveness - on screens less than 500px, make the navigation links appear on top of each other, instead of next to each other */
+  @media screen and (max-width: 500px) {
+    .navbar a {
+      float: none;
+      display: block;
+      width: 100%;
+      text-align: left; /* If you want the text to be left-aligned on small screens */
+    }
+  }
+
+  .form {
+      text-align: center;
+      border: beige;
+      background-color: rgba(255, 228, 196, 0.137);
+      width: 100%;
+    }
+  
+  .form input[type=text]:focus {
+    background-color: beige;
+  }
+
+  
