--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 /* Style the navigation menu */
 .navbar {
     width: 100%;
-    background-color: rgba(94, 144, 253, 0);
+    background-color: rgba(252, 0, 0, 0.205);
+    background-image: linear-gradient(-90deg, rgba(59, 51, 107, 0.37), rgba(255, 255, 0, 0.267));
     overflow: auto;
+    border-radius: 5px;
   }
   
   /* Navigation links */
@@ -41,21 +43,32 @@
   .form {
       text-align: center;
       border: beige;
-      border-radius: 12px;
-      background-color: rgba(255, 228, 196, 0.137);
+      border-radius: 15px;
+      /* background-color: rgba(255, 228, 196, 0.137); */
+      background-color: rgba(252, 139, 0, 0.11);
       width: 100%;
       width: 500px;
       margin: auto;
+      /* background-image: linear-gradient(rgba(255, 255, 255, 0.336), rgba(252, 0, 0, 0.205)); */
+      background-image: linear-gradient( to bottom right, rgba(255, 255, 0, 0.055), rgba(50, 38, 107, 0.411));
     }
   
   .form input[type=text]:focus {
     background-color: beige;
   }
 
-  .button:hover {
-    background-color: rgba(116, 148, 255, 0.548); /* Green */
+  .submit {
     border: none;
-    color: white;
+    border-radius: 10px;
+    background-color: rgba(184, 221, 184, 0.664); 
+  }
+  
+  .catch {
+    /* background-color: rgba(116, 148, 255, 0.548); */
+    /* background-color: rgba(116, 255, 146, 0.76);  */
+    /* background-color: rgba(152, 162, 255, 0.76);  */
+    border: 2px solid rgba(98, 80, 255, 0.315);
+    color: rgb(54, 63, 194);
     padding: 20px;
     text-align: center;
     text-decoration: none;
@@ -63,9 +76,31 @@
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
-    border-radius: 12px;
+    border-radius: 10px;
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 20px 50px 0 rgba(0, 0, 0, 0.644);
   }
+  .catch:hover {background-color: #2600fd48}
+
+
+  .caught {
+    /* background-color: rgba(116, 255, 146, 0.548);  */
+    /* background-color: rgba(93, 130, 252, 0.76); */
+    /* background-color: rgba(54, 155, 76, 0.76);  */
+    /* background-color: rgb(152, 162, 255);  */
+    border: 2px solid grey;
+    color: rgb(73, 73, 73);
+    padding: 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 10px;
+    /* box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 20px 50px 0 rgba(0, 0, 0, 0.733); */
+  }
+  /* .caught:hover {background-color: rgba(52, 51, 54, 0.377)} */
+
 
   .critter {
     display: inline-grid;
